<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background = "@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="222dp"
        android:layout_height="75dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/trenjuguete" />

    <TextView
        android:id="@+id/txtPregunta"
        android:layout_width="155dp"
        android:layout_height="28dp"
        android:layout_marginTop="624dp"
        android:fontFamily="casual"
        android:text="@string/score"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_rounded_border"
        android:fontFamily="casual"
        android:text="@string/check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPregunta" />

    <ScrollView
        android:layout_width="358dp"
        android:layout_height="555dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="278dp"
                android:layout_height="37dp"
                android:elegantTextHeight="true"
                android:fontFamily="casual"
                android:text="@string/eraikin_hauetatik_zeintzuk_daude_bilbon"
                android:textSize="14sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/SanMames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#000000"
                android:fontFamily="casual"
                android:text="@string/san_mames" />

            <CheckBox
                android:id="@+id/AzkunaZentroa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#000000"
                android:fontFamily="casual"
                android:text="@string/azkuna_zentroa" />

            <CheckBox
                android:id="@+id/BizkaikoZubia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#000000"
                android:fontFamily="casual"
                android:text="@string/bizkaiko_zubia" />

            <CheckBox
                android:id="@+id/Bilbokoaireportua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#000000"
                android:fontFamily="casual"
                android:text="@string/bilboko_aireportua" />

            <CheckBox
                android:id="@+id/Gaztelugatxe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#000000"
                android:fontFamily="casual"
                android:text="@string/gaztelugatxe" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:elegantTextHeight="true"
                android:fontFamily="casual"
                android:text="@string/zein_da_bilboko_janaririk_ezagunena_edo_tipikoena"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/Pregunta2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:fontFamily="casual"
                    android:text="@string/paella" />

                <RadioButton
                    android:id="@+id/GurinOpila"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:fontFamily="casual"
                    android:text="@string/gurin_opila" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:fontFamily="casual"
                    android:text="@string/olagarroa_patatekin" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:fontFamily="casual"
                    android:text="@string/pasta" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:fontFamily="casual"
                android:text="@string/zein_da_bilboko_jaietako_pertsonai_garrantzitsuena"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/Pregunta3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:fontFamily="casual"
                    android:text="@string/olentzero" />

                <RadioButton
                    android:id="@+id/Marijaia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:fontFamily="casual"
                    android:text="@string/marijaia" />

                <RadioButton
                    android:id="@+id/radioButton9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:fontFamily="casual"
                    android:text="@string/puppi_txakurra" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:fontFamily="casual"
                    android:text="@string/bilboko_alkatea" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:elegantTextHeight="true"
                android:fontFamily="casual"
                android:text="@string/zein_da_bilbon_aurki_dezakegun_basilika"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/Pregunta4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:fontFamily="casual"
                    android:text="@string/santa_maria_basilika" />

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:fontFamily="casual"
                    android:text="@string/san_frantzisko_handiaren_errege_basilika" />

                <RadioButton
                    android:id="@+id/Begoña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:fontFamily="casual"
                    android:text="@string/bego_ako_basilika" />

                <RadioButton
                    android:id="@+id/radioButton12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:fontFamily="casual"
                    android:text="@string/done_joan_laterangoaren_basilika" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:elegantTextHeight="true"
                android:fontFamily="casual"
                android:text="@string/zer_ospatzen_da_bilboko_arenal_gunean"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/Pregunta5"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/SantoTomas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:fontFamily="casual"
                    android:text="@string/santo_tomas" />

                <RadioButton
                    android:id="@+id/radioButton18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:fontFamily="casual"
                    android:text="@string/gau_beltza" />

                <RadioButton
                    android:id="@+id/radioButton17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:fontFamily="casual"
                    android:text="@string/bilboko_maratoia" />

                <RadioButton
                    android:id="@+id/radioButton16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:fontFamily="casual"
                    android:text="@string/fashion_week" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>